# Raba

./: .gitignore  AGENTS.md  LOCAL_SETUP.md  package-lock.json
Backend/: .env  .env.example  .gitignore  AGENTS.md  ARCHITECTURAL_CRITIQUE_ANALYSIS.md  CATEGORY_AND_INSTRUCTION_FOLLOW_IMPROVEMENT_PLAN.md  CHARACTER_REFERENCE_FIX_PLAN.md  CRITIC_IMPROVEMENT_PLAN.md  IMAGE_GENERATION_FIXES_PLAN.md  IMPLEMENTATION_PLAN.md  INGREDIENTS_STRATEGY_IMPLEMENTATION_PLAN.md  MASTER_IMAGE_COMPOSITION_IMPROVEMENT_PLAN.md  PHASE1_PLAN.md  PHASE2_1_INTENT_TOOL_SELECTOR_PLAN.md  PHASE2_2_TOOL_REPOSITORY_PLAN.md  PHASE2_3_DEEP_RESEARCH_PLAN.md  PHASE2_4_SCRIPT_GENERATOR_PLAN.md  PHASE3_1_IMAGE_GENERATOR_PLAN.md  PHASE3_2_VIDEO_GENERATOR_PLAN.md  PHASE3_3_OUTPUT_PROCESSOR_PLAN.md  PHASE4_1_4_2_HITL_MULTISEGMENT_PLAN.md  PHASE4_3_4_5_IMPLEMENTATION_PLAN.md  PROMPT_SYSTEM_IMPROVEMENT_PLAN.md  RABA_ROBUSTNESS_FIX_STRATEGY.md  README.md  bulk_update_ingredients.sh  main.py  pyproject.toml  requirements.txt  sys_imp_guide.md
Backend/Documentations/: independent_voice_strategy.md  monitoring_setup.md  nanao_banana_doc.md  nano_prompt_guide.md  tables.sql  veo_3.1.md  veo_doc.md  veo_prompting_guide.md
Backend/app/: __init__.py  config.py  main.py
Backend/docs/: setup.md
Backend/migrations/: 001_create_workflows.sql  002_create_tools.sql  003_create_media.sql  004_create_config.sql  005_add_workflows_deleted_at.sql  005_enhance_tools_table.sql  006_update_seed_tools_prompts.sql  007_add_user_selected_tool.sql  008_add_character_reference_sheet.sql  009_add_audio_output.sql  tables.sql  (+4 more)
(+1806 files in other folders)
